--- a/inscriptions/templates/admin/inscriptions/equipe/change_form.html
+++ b/inscriptions/templates/admin/inscriptions/equipe/change_form.html
@@ -30,7 +30,7 @@
     $('.form-row.field-prix').append(
 '        <div class="field-box">' +
 '            <label>Payé</label>' +
-'            <div class="readonly"><a href="../../../paiement/?equipe_id={{ original.id }}">{{ original.montant_paiements }} (voir les paiements)</a> <button type="button" onclick="location.href=\'../../../paiement/add?equipe_id={{ original.id }}\';">Ajouter un paiement</button></div>' +
+'            <div class="readonly"><a href="../../../paiement/?equipe_id={{ original.id }}">{% if original.offert %}Offert{% if original.montant_paiements %} ({{ original.montant_paiements }} payés){% endif %}{% else %}{{ original.montant_paiements }}{% endif %} (voir les paiements)</a> <button type="button" onclick="location.href=\'../../../paiement/add?equipe_id={{ original.id }}\';">Ajouter un paiement</button></div>' +
 '        </div>')
 </script>
 {% endif %}
