--- a/inscriptions/templates/_helloasso.html
+++ b/inscriptions/templates/_helloasso.html
@@ -96,6 +96,7 @@
       font-family: "Open Sans", "Trebuchet MS", "Lucida Sans Unicode",
         "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       transition: all 0.3s ease-out;
+      box-sizing: content-box;
     }
 
     .HaPayButton {
