--- a/inscriptions/templates/resultats.html
+++ b/inscriptions/templates/resultats.html
@@ -38,8 +38,8 @@
                 {% endif %}
             {% endif %}
                 <tr class="{% cycle 'odd' 'even' %}">
-                    <td>{{ equipe.numero }}</td>
-                    <td>{{ equipe.nom }}</td>
+                    <td><a href="{% url "inscriptions_resultats_equipe" course_uid=COURSE.uid numero=equipe.numero %}">{{ equipe.numero }}</a></td>
+                    <td><a href="{% url "inscriptions_resultats_equipe" course_uid=COURSE.uid numero=equipe.numero %}">{{ equipe.nom }}</a></td>
                     <td>{{ equipe.position_generale }}</td>
                     <td>{{ equipe.categorie.code }}</td>
                     <td>{{ equipe.position_categorie }}</td>
