--- a/inscriptions/templates/resultats.html
+++ b/inscriptions/templates/resultats.html
@@ -21,6 +21,7 @@
                         <th>Cat.</th>
                         <th>Position</th>
                         <th>Tours</th>
+                        <th>Distance</th>
                         <th>Temps</th>
                     </tr>
                 {% endifchanged %}
@@ -33,6 +34,7 @@
                         <th>Cat.</th>
                         <th>Position</th>
                         <th>Tours</th>
+                        <th>Distance</th>
                         <th>Temps</th>
                     </tr>
                 {% endif %}
@@ -44,6 +46,7 @@
                     <td>{{ equipe.categorie.code }}</td>
                     <td>{{ equipe.position_categorie }}</td>
                     <td>{{ equipe.tours }}</td>
+                    <td>{{ equipe.distance|floatformat }} km</td>
                     <td>{{ equipe.temps_humain }}</td>
                 </tr>
             {% endfor %}
