--- a/inscriptions/templates/done.html
+++ b/inscriptions/templates/done.html
@@ -53,7 +53,11 @@
     </div>
     <div class="panel-body">
         {% if not instance.paiement_complet %}
-        {% if COURSE.paypal or COURSE.stripe_public %}
+        {% if request.GET.code == "succeeded" %}
+        {% trans "Votre paiement est en attente de validation." %}
+        <script>setTimeout(() => location.reload(), 2000);</script>
+        {% else %}
+        {% if COURSE.paypal or COURSE.stripe_public or COURSE.helloasso_organisation %}
         <p>{% trans 'Pour régler votre inscription vous pouvez payer par internet :' %}</p>
 
         {% if COURSE.paypal %}{% include "_paypal.html" %}{% endif %}
@@ -65,6 +69,7 @@
         <p>{% blocktrans with prix=instance.reste_a_payer ordre=COURSE.ordre %}Pour régler votre inscription vous pouvez envoyer un chèque de {{ prix }} € à l'ordre de "{{ ordre }}".{% endblocktrans %}</p>
         {% endif %}
         <p>{% blocktrans with date=instance.date_annulation %}Envoyez votre paiement avant le {{ date }}. Si nous n'avons pas reçu votre paiement à cette date, votre inscription sera annulée.{% endblocktrans %}</p>
+        {% endif %}
         {% else %}
         <p>{% blocktrans with prix=instance.montant_paiements %}Vos frais d'inscription ({{ prix }} €) ont bien été reçus.{% endblocktrans %}</p>
         {% endif %}
